--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.3
   http: ^0.13.6
+  flutter_slidable: ^3.0.0
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
